--- a/libs/feature/todo/src/lib/components/todo-listing/todo-listing.component.html
+++ b/libs/feature/todo/src/lib/components/todo-listing/todo-listing.component.html
@@ -1,6 +1,6 @@
 <div class="header-buttons">
     <div class="flex justify-content-end">
-        <button type="button" pButton class="my-2">Add New Todo</button>
+        <button type="button" pButton class="my-2" (click)="addNewTodo()">Add New Todo</button>
     </div>
 </div>
 <div class="container" *ngIf="todoList">
